--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,11 @@
   padding: 0;
   margin: 0;
 }
+@keyframes dashmove {
+  from {
+    stroke-dashoffset: 1000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
